--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flutter_svg: ^2.0.0
+  flutter_svg: ^2.0.10
   flutter_animator: ^3.2.2
   flutter_animate: ^4.5.0
-  auto_size_text:
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
